# reddit-hype-alpha-lab

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
configs/: config.yaml  strategy_params.yaml  subreddits.yaml  ticker_filters.yaml
data/manual/ticker_aliases/: aliases.yaml
notebooks/: 01_reddit_data_audit.ipynb  02_ticker_extraction.ipynb  03_hype_score_research.ipynb  04_event_study.ipynb  05_portfolio_backtest.ipynb  06_dashboard.ipynb
scripts/: _bootstrap.py  backfill.py  build_features.py  build_ticker_universe.py  doctor.py  extract_mentions.py  fetch_prices.py  fetch_reddit.py  generate_watchlist.py  load_reddit_history.py  mine_strategies.py  most_talked_about.py  oos_replication.py  run_backtest.py  run_event_study.py  run_research_loop.py
src/reddit_hype/: __init__.py  backtester.py  bot_spam_filters.py  cli.py  config.py  costs.py  dashboard.py  diagnostics.py  fmp_client.py  freedata.py  hype_features.py  labels.py  metrics.py  mining.py  models.py  pipeline.py  portfolio.py  reddit_client.py  reddit_history.py  reporting.py  research_loop.py  sentiment.py  text_cleaning.py  ticker_extractor.py  ticker_universe.py  utils.py
tests/: conftest.py  test_backtester.py  test_diagnostics.py  test_freedata.py  test_hype_features.py  test_mining.py  test_no_lookahead.py  test_portfolio.py  test_reddit_history.py  test_ticker_extractor.py
