[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reddit-hype-alpha-lab"
version = "0.1.0"
description = "Research engine that scans Reddit for stock hype, measures attention/sentiment/velocity, and backtests whether that hype predicts forward returns."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Reddit Hype Alpha Lab" }]
keywords = ["quant", "reddit", "sentiment", "alternative-data", "backtesting", "equities"]

dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "pyarrow>=12.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "requests>=2.31",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "tqdm>=4.66",
]

[project.optional-dependencies]
reddit = ["praw>=7.7"]
sentiment = ["vaderSentiment>=3.3.2"]
boost = ["lightgbm>=4.0"]
dashboard = ["streamlit>=1.30", "plotly>=5.18"]
history = ["zstandard>=0.21", "orjson>=3.9"]
dev = ["pytest>=7.4", "pytest-cov>=4.1", "ruff>=0.4", "black>=24.0", "ipykernel>=6.0"]
all = [
    "praw>=7.7",
    "vaderSentiment>=3.3.2",
    "lightgbm>=4.0",
    "streamlit>=1.30",
    "plotly>=5.18",
    "zstandard>=0.21",
    "orjson>=3.9",
]

[project.scripts]
rhal-fetch-reddit = "reddit_hype.cli:_entry_fetch_reddit"
rhal-watchlist = "reddit_hype.cli:_entry_watchlist"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310"]
